# blank

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  build.sh
.github/workflows/: ci.yml
cmake/: ExpatExternalProject.cmake  FindLOG4C.cmake  Log4cExternalProject.cmake
include/: common.h  log.h
resource/: log4crc
src/: log.c  main.c
